<resources>
    <string name="app_name">shmily</string>

    <!--纸条储蓄罐-->
    <string name="paper_store">纸条储蓄罐</string>
    <string name="draw_paper">抽纸条</string>
    <string name="my_paper_storage">我的纸条储蓄罐</string>

    <string name="service">由木犀团队提供服务</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--添加新的日子-->
    <string name="add_new_date">添加新的日子</string>
    <string name="input_thing_name">输入事件名称</string>
    <string name="input_thing_date">输入事件发生日期</string>
    <string name="the_top">置顶</string>
    <string name="smart_remind">智能提醒</string>
    <string name="date_future_last">选择未来日期正数，选择过去日期负数</string>
    <string name="save">保存</string>

    <!--写纸条-->
    <string name="select_paper_color">选取纸条颜色</string>
    <string name="write_moment">用纸条记录下被爱的瞬间</string>
    <string name="write_date">记录一下日期</string>
    <string name="complete">完成</string>
    <string name="The_paper_has_been_in_the_storage">纸条已经进入储蓄罐</string>
    <string name="look_the_papers">点进去看看曾经写的纸条叭</string>
    <string name="return_the_store">放回储蓄罐</string>
    <string name="title_activity_write_paper">WritePaperActivity</string>

    <!--判断写纸条时输入内容是否为空-->
    <string name="please_input_text">请输入内容</string>
    <string name="please_choose_color">请选择颜色</string>
    <string name="please_input_date">请输入日期</string>

    <!--写信-->
    <string name="write_paper">写信</string>
    <string name="name">他/她的称呼</string>
    <string name="write_down_the_words_from_the_heart">写下想对他/她说的心里话吧！</string>
    <string name="nickname">昵称</string>
    <string name="date">日期</string>
    <string name="choose_photo_from_the_album">从相册中选取\n一张照片当邮票吧</string>
    <string name="title">给信封取个小标题~</string>

    <!--我的邮局界面-->
    <string name="my_post_office">我的邮局</string>
    <string name="envelope">信封</string>
    <string name="text_of_envelope">text</string>
    <string name="date_of_envelope">date</string>

    <!--关于他/她-->
    <string name="about_he_she">关于张三</string>
    <string name="observe_and_record">用心观察和记录~</string>
    <string name="about_he_she_item">关于他/她</string>
    <string name="input_title">输入标题</string>
    <string name="input_text">输入内容</string>
    <string name="choose_photo">选取照片</string>
    <string name="please_input_title">请输入标题</string>
    <string name="please_choose_picture">请选择图片</string>

    <!--记忆-->
    <string name="zhang_san">张三</string>
    <string name="remind">提醒</string>
    <string name="memorial_day">纪念日</string>
    <string name="memory">记忆</string>
    <string name="position">定位</string>
    <string name="mine">我的</string>
    <string name="add">添加</string>
</resources>