<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    tools:context=".WriteEnvelopeFragment"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/pre_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/back"/>
        <Button
            android:id="@+id/completed"
            android:text="@string/complete"
            android:textColor="@color/lightgreen"
            android:backgroundTint="@color/white"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:id="@+id/name"
            android:background="@drawable/stroke_shape_white"
            android:hint="@string/name"
            android:gravity="top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_weight="6"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/write_down_the_words_from_the_heart"
            android:gravity="top"
            android:background="@drawable/stroke_shape_white"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nickname"
            android:gravity="right"
            android:background="@drawable/stroke_shape_white"/>
        <EditText
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date"
            android:gravity="right"
            android:background="@drawable/stroke_shape_white"/>
        <LinearLayout
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <ImageView
                android:id="@+id/add_photo"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:background="@mipmap/add_photo" />
            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_weight="6"
                android:layout_height="match_parent"
                android:text="@string/choose_photo_from_the_album"
                android:textColor="@color/lightgreen"
                android:textSize="25sp" />
        </LinearLayout>
        <EditText
            android:hint="@string/title"
            android:gravity="top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/stroke_shape_white"/>
        <TextView
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/service"
            android:gravity="center|bottom"/>
    </LinearLayout>

</LinearLayout>