<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context="android.bignerdranch.shmily.MemoryActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:background="@drawable/stroke_shape_white">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/zhang_san"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="166dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/zhang_san"
                android:textColor="@color/lightgreen"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@mipmap/exchange"/>
        </RelativeLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/remind"
            android:textColor="@color/lightgreen"
            android:textSize="25sp"/>
        <TextView
            android:id="@+id/remind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="null"
            android:textSize="25sp"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/my_paper_storage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/stroke_shape_memory_green"
            android:text="@string/paper_store"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:padding="15dp"
            android:layout_marginTop="10dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/my_post_office"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:background="@drawable/stroke_shape_memory_green"
            android:text="@string/my_post_office"
            android:padding="15dp"
            android:layout_marginTop="30dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/memorial_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:background="@drawable/stroke_shape_memory_green"
            android:text="@string/memorial_day"
            android:padding="15dp"
            android:layout_marginTop="30dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/about_he_she"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:background="@drawable/stroke_shape_memory_green"
            android:text="@string/about_he_she_item"
            android:padding="15dp"
            android:layout_marginTop="30dp"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@drawable/stroke_shape_white">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="bottom">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/memory_button_green"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="50dp"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@mipmap/map_button_gray"/>

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="50dp"
                android:background="@mipmap/user_button_gray" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginLeft="60dp"
                android:text="@string/memory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/position"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mine"
                android:layout_alignParentRight="true"
                android:layout_marginRight="55dp"/>
        </RelativeLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/service"
        android:gravity="center"/>

</LinearLayout>