<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/pre_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/arrow_back"/>

        <Button
            android:id="@+id/completed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="-1dp"
            android:backgroundTint="@color/white"
            android:text="@string/complete"
            android:textColor="@color/lightgreen"
            android:textStyle="bold" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_title"
            android:id="@+id/input_title"
            android:background="@drawable/stroke_shape_white"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:hint="@string/input_text"
            android:gravity="top"
            android:background="@drawable/stroke_shape_my_paper_storage_green"
            android:id="@+id/input_text"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/stroke_shape_white"
            android:layout_weight="3">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@mipmap/add_photo"
                android:id="@+id/add_photo"/>
            <ImageView
                android:layout_width="1dp"
                android:layout_height="150dp"
                android:background="@color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:backgroundTint="@color/white"
                android:text="@string/choose_photo"
                android:textColor="@color/lightgreen"
                android:gravity="center" />
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/service"
        android:gravity="center|bottom"
        android:layout_weight="1"/>
</LinearLayout>